# bratpy

./: .gitignore  LICENSE  README.md  setup.cfg
src/bratpy/: conf.py  diff_and_mark.py  json.py  mecabsplit.py  modify_annotations.py  simplesplit.py  ssplit.py  standoffizer.py  sudachisplit.py  webanno_tsv.py
