[metadata]
name = bratpy
version = 0.0.4
author = Goran Topic
author_email = amadanmath@gmail.com
description = A small library for handling brat .ann files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amadanmath/bratpy
project_urls =
    Bug Tracker = https://github.com/amadanmath/bratpy/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Topic :: Text Processing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
